prevent touch highlighting on mobile

--- a/clj/resources/public/css/boop.css
+++ b/clj/resources/public/css/boop.css
@@ -1,6 +1,7 @@
 * {
     font-size: 64px;
     font-family: 'Roboto Slab', monospace;
+    -webkit-tap-highlight-color: transparent;
 }
 
 #graph, #button-container {
